        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=12165
        REGRESSION: text encoding problem at jn.sapo.pt

        Test: fast/encoding/script-in-head.html

        * loader/TextResourceDecoder.cpp:
        (WebCore::TextResourceDecoder::checkForHeadCharset):
        Ignore tags within <script> elements in head, just like we do for <title>.



Canonical link: https://commits.webkit.org/15839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18833 268f45cc-cd09-0410-ab3c-d52691b4dbfc